--- a/src/app/components/brands/brands.component.html
+++ b/src/app/components/brands/brands.component.html
@@ -6,7 +6,7 @@
       itemsPerPage: pageSize,
       currentPage: curentPage,
       totalItems: total }">
-        <div class="p-2 cursor-pointer" [routerLink]="['/brandsDetails', item._id]" >
+        <div class="p-2 cursor-pointer product" [routerLink]="['/brandsDetails', item._id]" >
           <img class="w-100" [src]="item.image" [alt]="item.name">
           <hr>
           <h3 class="pt-2 text-center small fw-bold text-main">{{item.name}}</h3>
