--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,21 +3,25 @@
       <div class="container-fluid">
       <div class="row g-0">
         <div class="col-md-8">
-          <owl-carousel-o [options]="mainSlider">
-            <ng-template carouselSlide>
-              <img height="400" class="w-100" src="./assets/images/main-slider-1.jpeg" alt="">
-            </ng-template>
-            <ng-template carouselSlide>
-              <img height="400" class="w-100" src="./assets/images/main-slider-2.jpeg" alt="">
-            </ng-template>
-            <ng-template carouselSlide>
-              <img height="400" class="w-100" src="./assets/images/main-slider-3.jpeg" alt="">
-            </ng-template>
-          </owl-carousel-o>
+          <div class="slider-imgs">
+            <owl-carousel-o [options]="mainSlider">
+              <ng-template carouselSlide>
+                <img class="w-100" src="./assets/images/main-slider-1.jpeg" alt="">
+              </ng-template>
+              <ng-template carouselSlide>
+                <img class="w-100" src="./assets/images/main-slider-2.jpeg" alt="">
+              </ng-template>
+              <ng-template carouselSlide>
+                <img class="w-100" src="./assets/images/main-slider-3.jpeg" alt="">
+              </ng-template>
+            </owl-carousel-o>
+          </div>
         </div>
         <div class="col-md-4">
-          <img height="200" class="w-100" src="./assets/images/slide-1.jpeg" alt="">
-          <img height="200" class="w-100" src="./assets/images/slide-2.jpeg" alt="">
+          <div class="static-imgs">
+            <img class="w-100" src="./assets/images/slide-1.jpeg" alt="">
+            <img class="w-100" src="./assets/images/slide-2.jpeg" alt="">
+          </div>
         </div>
       </div>
     </div>
@@ -47,7 +51,6 @@
           <div class="row g-3">
             <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3" *ngFor="let item of productData | search: searchValue | slice : 0 : 20">
               <div class="card p-2 product h-100">
-
                 <div class="router" role="button" [routerLink]="['/details', item._id]">
               <img class="w-100" [src]="item.imageCover" [alt]="item.title">
               <div class="productDetails">
