--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -2,22 +2,33 @@
   padding: 5rem 0;
 }
 
-.product {
-  overflow: hidden;
-  .main-btn {
-    transform: translateY(200%);
-    opacity: 0;
-    transition: 1s;
-  }
-  &:hover {
-    .main-btn {
-    transform: translateY(0);
-    opacity: 1;
-    }
-  }
   .fa-heart:hover {
     color: red;
   }
 
+.slider-imgs img {
+  height: 25rem;
+}
+.static-imgs img {
+  height: 12.5rem;
 }
 
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .slider-imgs img {
+    height: 300px;
+  }
+  .static-imgs img {
+    height: 150px;
+  }
+
+}
+
+@media screen and (max-width: 576px) {
+  .slider-imgs img {
+    height: 300px;
+  }
+  .static-imgs img {
+    height: 150px;
+  }
+
+}
