--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -76,7 +76,7 @@
             Required
           </p>
           <p *ngIf="registerForm.get('password')?.getError('pattern')">
-            invalid Pattern
+            must be at least 6 characters
           </p>
         </div>
       </div>
