--- a/src/app/components/nav-blank/nav-blank.component.html
+++ b/src/app/components/nav-blank/nav-blank.component.html
@@ -7,19 +7,19 @@
       aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fa-solid fa-bars fs-2"></i>
     </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavId">
+    <div #closeNabar class="collapse navbar-collapse" id="collapsibleNavId">
       <ul class="navbar-nav me-auto gap-2 mt-2 mt-lg-0 text-center">
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active-link" routerLink="/home">Home</a>
+          <a class="nav-link" (click)="closeNavBar()" routerLinkActive="active-link" routerLink="/home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active-link" routerLink="/products">Products</a>
+          <a class="nav-link" (click)="closeNavBar()" routerLinkActive="active-link" routerLink="/products">Products</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active-link" routerLink="/categories">Categories</a>
+          <a class="nav-link" (click)="closeNavBar()" routerLinkActive="active-link" routerLink="/categories">Categories</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLinkActive="active-link" routerLink="/brands">Brands</a>
+          <a class="nav-link" (click)="closeNavBar()" routerLinkActive="active-link" routerLink="/brands">Brands</a>
         </li>
       </ul>
       <ul class="navbar-nav ms-auto align-items-center gap-1">
@@ -28,20 +28,20 @@
             <i class="fas fa-user fa-xl"></i>
           </a>
           <ul class="dropdown-menu p-1 text-center max-w">
-            <li><a class="nav-link" routerLinkActive="active-link" routerLink="/update-password">Update Password</a></li>
+            <li><a class="nav-link" (click)="closeNavBar()" routerLinkActive="active-link" routerLink="/update-password">Update Password</a></li>
             <li class="nav-item">
-              <a class="nav-link" routerLinkActive="active-link" routerLink="/allorders">My Orders</a>
+              <a class="nav-link" (click)="closeNavBar()" routerLinkActive="active-link" routerLink="/allorders">My Orders</a>
             </li>
           </ul>
         </li>
         <li class="nav-item pe-2">
-          <a class="nav-link bg-transparent text-black-50 position-relative" routerLink="/wishlist">
+          <a class="nav-link bg-transparent text-black-50 position-relative" (click)="closeNavBar()" routerLink="/wishlist">
             <i class="fa-solid fa-heart fa-2x"></i>
             <span class="badge bg-info position-absolute top-0 end-0">{{wishListCount}}</span>
           </a>
         </li>
         <li class="nav-item pe-2">
-          <a class="nav-link bg-transparent text-black-50 position-relative" routerLink="/cart">
+          <a class="nav-link bg-transparent text-black-50 position-relative" (click)="closeNavBar()" routerLink="/cart">
             <i class="fas fa-cart-shopping fa-2x"></i>
             <span class="badge bg-main position-absolute top-0 end-0">{{cartCount}}</span>
           </a>
@@ -52,7 +52,7 @@
           <i class="fab fa-whatsapp"></i>
           <i class="fab fa-linkedin"></i>
         </li>
-        <li class="nav-item py-2" (click)="signOut()">
+        <li class="nav-item py-2" (click)="signOut(); closeNavBar()">
           <span class="btn btn-outline-danger" role="button">Sign Out</span>
         </li>
       </ul>
